--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -7,11 +7,18 @@ environment:
 
 dependencies:
   cupertino_icons: ^1.0.6
+  flick_video_player: ^0.8.0
   flutter:
     sdk: flutter
+  flutter_svg: ^2.0.10+1
   get: 4.6.6
   google_fonts: ^6.2.0
-  svg_flutter: ^0.0.1
+  image_picker: ^1.1.2
+  nb_utils: ^7.0.3
+  provider: ^6.1.2
+  url_launcher: ^6.3.0
+  video_player: ^2.8.7
+  visibility_detector: ^0.4.0+2
 
 dev_dependencies:
   flutter_lints: 3.0.2
@@ -25,3 +32,4 @@ flutter:
     - assets/icons/
     - assets/images/
     - assets/svg/
+    - assets/videos/
