--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -16,6 +16,7 @@ dependencies:
   image_picker: ^1.1.2
   nb_utils: ^7.0.3
   provider: ^6.1.2
+  rename_app: ^1.5.0
   url_launcher: ^6.3.0
   video_player: ^2.8.7
   visibility_detector: ^0.4.0+2
@@ -24,6 +25,12 @@ dev_dependencies:
   flutter_lints: 3.0.2
   flutter_test:
     sdk: flutter
+  flutter_launcher_icons: "^0.13.1"
+
+flutter_icons:
+  android: true
+  ios: true
+  image_path: "assets/images/icon-maenbal.png"
 
 flutter:
   uses-material-design: true
